--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,25 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="search-container">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+      </form>
+    </div>
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
+
+    <!-- <button type="button" class="load-more is-hidden">Load more</button> -->
+    <div class="scroll-guard"></div>
+
+    <!-- <include src="./partials/example.html"></include> -->
+    <!-- <include src="./partials/hw11.html"></include> -->
   </body>
 </html>
