updates index js

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <!-- Карточки изображений -->
     </div>
 
-    <!-- <button type="button" class="load-more is-hidden">Load more</button> -->
+    <button type="button" class="load-more is-hidden">Load more</button>
     <div class="scroll-guard"></div>
 
     <!-- <include src="./partials/hw11.html"></include> -->
